Add "breadboard" for connecting components and recalculate outputs of logic gates every time